--- a/MyStopMonitor/Base.lproj/Main.storyboard
+++ b/MyStopMonitor/Base.lproj/Main.storyboard
@@ -17,6 +17,7 @@
                     <connections>
                         <segue destination="Hbs-2I-lMQ" kind="relationship" relationship="viewControllers" id="xRz-Lp-jLm"/>
                         <segue destination="4mz-JD-vUc" kind="relationship" relationship="viewControllers" id="fg8-ry-HHU"/>
+                        <segue destination="woo-R8-NMs" kind="relationship" relationship="viewControllers" id="HSL-9W-vUk"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0GB-CR-gGI" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -224,6 +225,49 @@
             </objects>
             <point key="canvasLocation" x="-547" y="394"/>
         </scene>
+        <!--Stop Monitor Info View Controller - INFO-->
+        <scene sceneID="m9d-RU-OXE">
+            <objects>
+                <viewController title="INFO" id="woo-R8-NMs" customClass="StopMonitorInfoViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GI0-jy-d6B"/>
+                        <viewControllerLayoutGuide type="bottom" id="okf-TZ-UWc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="aYm-f3-4xd">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" keyboardDismissMode="onDrag" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lgm-tS-Im2">
+                                <rect key="frame" x="0.0" y="109" width="320" height="405"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="VAH-uI-OIK">
+                                <rect key="frame" x="6" y="58" width="309" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="Welcome"/>
+                                    <segment title="About StopMonitor"/>
+                                </segments>
+                                <connections>
+                                    <action selector="indexChanged:" destination="woo-R8-NMs" eventType="valueChanged" id="UTT-cz-eBy"/>
+                                </connections>
+                            </segmentedControl>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Info" image="icon_info_alt" id="AxH-E2-FiW"/>
+                    <connections>
+                        <outlet property="infoTextSegment" destination="VAH-uI-OIK" id="iEm-k5-Nrt"/>
+                        <outlet property="infoTextView" destination="Lgm-tS-Im2" id="HgE-rk-ERq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5GM-xn-aQX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-526" y="1122"/>
+        </scene>
         <!--Alarm List Controller - Current Alarms-->
         <scene sceneID="jzi-Ga-BpT">
             <objects>
@@ -311,9 +355,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="63J-c2-WTe">
+                            <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="StationCell" id="vEn-gX-fa9" customClass="StationCell">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="130" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vEn-gX-fa9" id="Zsf-8e-jNb">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -409,11 +458,11 @@
             </objects>
             <point key="canvasLocation" x="394" y="133"/>
         </scene>
-        <!--Navigation Controller - Alarms-->
+        <!--Navigation Controller - My Stops-->
         <scene sceneID="vEe-yO-ebc">
             <objects>
                 <navigationController definesPresentationContext="YES" id="Hbs-2I-lMQ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" tag="1" title="Alarms" image="tabBarAlarmClock" id="53N-8t-Oee"/>
+                    <tabBarItem key="tabBarItem" tag="1" title="My Stops" image="tabBarAlarmClock" id="53N-8t-Oee"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="SAi-UT-YYc">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -428,6 +477,7 @@
     </scenes>
     <resources>
         <image name="Settings-icon" width="29" height="29"/>
+        <image name="icon_info_alt" width="29" height="29"/>
         <image name="tabBarAlarmClock" width="29" height="29"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
