--- a/MyStopMonitor/Base.lproj/Main.storyboard
+++ b/MyStopMonitor/Base.lproj/Main.storyboard
@@ -237,12 +237,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" keyboardDismissMode="onDrag" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lgm-tS-Im2">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" keyboardDismissMode="onDrag" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lgm-tS-Im2">
                                 <rect key="frame" x="0.0" y="109" width="320" height="405"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
                             </textView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="VAH-uI-OIK">
                                 <rect key="frame" x="6" y="58" width="309" height="29"/>
@@ -409,6 +410,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Add Stop Alarm" id="d9A-3C-3qI"/>
+                    <connections>
+                        <outlet property="searchBar" destination="63J-c2-WTe" id="LAI-LI-ltE"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qip-ki-ffd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
