Adding a webView to the about page to save time for submission at uni, will eventually change it back to a TextView with AttributedStrings soon.

--- a/MyStopMonitor/Base.lproj/Main.storyboard
+++ b/MyStopMonitor/Base.lproj/Main.storyboard
@@ -237,14 +237,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" keyboardDismissMode="onDrag" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lgm-tS-Im2">
-                                <rect key="frame" x="0.0" y="109" width="320" height="405"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="16"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
-                            </textView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="VAH-uI-OIK">
                                 <rect key="frame" x="6" y="58" width="309" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -256,13 +248,18 @@
                                     <action selector="indexChanged:" destination="woo-R8-NMs" eventType="valueChanged" id="UTT-cz-eBy"/>
                                 </connections>
                             </segmentedControl>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wlq-BN-ds8">
+                                <rect key="frame" x="6" y="103" width="309" height="408"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Info" image="icon_info_alt" id="AxH-E2-FiW"/>
                     <connections>
+                        <outlet property="aboutWebView" destination="wlq-BN-ds8" id="KZn-Zj-vIc"/>
                         <outlet property="infoTextSegment" destination="VAH-uI-OIK" id="iEm-k5-Nrt"/>
-                        <outlet property="infoTextView" destination="Lgm-tS-Im2" id="HgE-rk-ERq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5GM-xn-aQX" userLabel="First Responder" sceneMemberID="firstResponder"/>
