--- a/MyStopMonitor/Base.lproj/Main.storyboard
+++ b/MyStopMonitor/Base.lproj/Main.storyboard
@@ -228,7 +228,7 @@
         <!--Stop Monitor Info View Controller - INFO-->
         <scene sceneID="m9d-RU-OXE">
             <objects>
-                <viewController title="INFO" id="woo-R8-NMs" customClass="StopMonitorInfoViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="infoViewController" title="INFO" id="woo-R8-NMs" customClass="StopMonitorInfoViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="GI0-jy-d6B"/>
                         <viewControllerLayoutGuide type="bottom" id="okf-TZ-UWc"/>
@@ -353,7 +353,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Station Name" showsSearchResultsButton="YES" id="63J-c2-WTe">
+                        <searchBar key="tableHeaderView" contentMode="redraw" text="" placeholder="Station Name" id="63J-c2-WTe">
                             <rect key="frame" x="0.0" y="64" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits" autocorrectionType="no"/>
